samples/_failures_safe/1761393450_3eeb89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fac3b93.c: In function ‘main’:
./samples/SAFE/__tmp_7fac3b93.c:180:29: error: expected ‘]’ at end of input
  180 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_7fac3b93.c:180:5: error: expected declaration or statement at end of input
  180 |     if (len > 0 && input[len
      |     ^~
